--- a/2.html
+++ b/2.html
@@ -13,8 +13,7 @@
       <li><a href="4.html">chu gyo min</a></li>
       <br>
       <br>
-      nick name : Hong
-
+      nick name : duck she
   </body>
 </html>
 </head>
