--- a/1.html
+++ b/1.html
@@ -1,9 +1,8 @@
-<head>
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>shuheung_CM</title>
   </head>
   <body>
     <h1><a href="main.html">Shiheung Middle School Cartel</a></h1>
@@ -14,7 +13,5 @@
       <br>
       <br>
       nick name : Hong
-
   </body>
 </html>
-</head>
