--- a/2.html
+++ b/2.html
@@ -1,9 +1,8 @@
-<head>
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>shuheung_CM</title>
   </head>
   <body>
     <h1><a href="main.html">Shiheung Middle School Cartel</a></h1>
@@ -16,4 +15,3 @@
       nick name : duck she
   </body>
 </html>
-</head>
