--- a/main.html
+++ b/main.html
@@ -1,9 +1,8 @@
-<head>
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>shuheung_CM</title>
   </head>
   <body>
     <h1><a href="main.html">Shiheung Middle School Cartel</a></h1>
@@ -13,4 +12,3 @@
       <li><a href="4.html">chu gyo min</a></li>
   </body>
 </html>
-</head>
