--- a/4.html
+++ b/4.html
@@ -5,13 +5,144 @@
     <title>shuheung_CM</title>
   </head>
   <body>
-    <h1><a href="main.html">Shiheung Middle School Cartel</a></h1>
-      <li><a href="1.html">kim hong il</a></li>
-      <li><a href="2.html">kim hyun duck</a></li>
-      <li><a href="3.html">sim hyun bo</a></li>
-      <li><a href="4.html">chu gyo min</a></li>
-      <br>
-      <br>
-      nick name : Mr.chu
+
+    <div class="test">
+
+    </div>
+    <div class="container">
+
+          <div id="watch" >00:00:00</div>
+
+        </div>
+
+
+
+        <style>
+
+                   *{margin: 0; padding: 0;}
+
+               body { font-family: Arial; background-color: #000; color: #fff; }
+
+           .container { width: 100%; height: 100%; display: table; }
+
+               #watch {
+
+                   font-weight: bold; font-size: 10vmax; text-align: center;
+
+                   display: table-cell; vertical-align: middle;
+
+                       }
+
+           </style>
+
+
+
+
+
+        <script>
+
+     window.onload = function () {
+
+      clock();
+
+    }
+
+
+
+    function clock() {
+
+      var today = new Date();
+
+      var todayHour = convert24to12(today.getHours());
+
+      var todayMin = today.getMinutes();
+
+      var todaySec = today.getSeconds();
+
+      var todayAmPm = ap(today.getHours());
+
+
+
+
+
+      document.getElementById('watch').innerHTML =
+
+      '<span style=font-size:30%>' +
+
+        todayAmPm + '</span>' +
+
+        todayHour + ' : '  +
+
+        todayMin + ' : ' +
+
+        todaySec;
+
+
+
+      window.setInterval('clock()',1000);
+
+    }
+
+
+
+    function ap(h){
+
+      var ampm = Math.floor(h/12);
+
+
+
+      if(ampm == 0){
+
+        return 'AM'
+
+      }else{
+
+        return 'PM';
+
+      }
+
+    }
+
+
+
+    function convert24to12 (h){
+
+      var hour_12 = h%12;
+
+        if(hour_12 ==0){
+
+          hour_12 += 12;
+
+        }
+
+
+
+        return hour_12;
+
+    }
+
+
+
+
+
+    function doubleDigit(a){
+
+      if(a > 9){
+
+        return a;
+
+      }else{
+
+        return '0'+a;
+
+      }
+
+    }
+
+
+
+
+
+    </script>
   </body>
 </html>
