--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>shuheung_CM</title>
+    <link rel="stylesheet" href="css/form.css">
   </head>
   <body>
     <h1><a href="main.html">Shiheung Middle School Cartel</a></h1>
@@ -10,5 +11,26 @@
       <li><a href="2.html">kim hyun duck</a></li>
       <li><a href="3.html">sim hyun bo</a></li>
       <li><a href="4.html">chu gyo min</a></li>
+      <div style="background-color:red">첫번째 영역</div>
+      <div style="width:100px; height:100px; background-color:#CF0">두번째 영역</div>
+      <div class="counter"></div>
+      <form>
+  <input type="datetime-local" id='currentDatetime'/>
+</form>
+
+<script>
+  document.getElementById('currentDatetime').value= new Date().toISOString().slice(0, -1);
+</script>
+   <script>
+       let counter = document.querySelector('.counter');
+       let today = new Date(), //현재 날짜 가져오기
+           dday = new Date("jan 10,2021, 00:00:00").getTime(), //디데이
+           gap =  dday - today,
+           result = Math.floor(gap / (1000 * 60 * 60 * 24));
+
+       counter.innerHTML = `D-${result}`
+   </script>
+
+
   </body>
 </html>
